fix font encoding scaling issue

--- a/gkthiruvathukal-cv.tex
+++ b/gkthiruvathukal-cv.tex
@@ -4,6 +4,10 @@
 %\documentclass[10pt,usletter,sans,draft]{moderncv} 
 \documentclass[10pt,usletter,sans]{moderncv} 
 
+% See if this will fix the font scaling problem
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+
 \input{heading}
 
 \begin{document}
