see if we can use Bionic container

--- a/gkthiruvathukal-cv.tex
+++ b/gkthiruvathukal-cv.tex
@@ -5,8 +5,8 @@
 \documentclass[10pt,usletter,sans]{moderncv} 
 
 % See if this will fix the font scaling problem
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
+%\usepackage[T1]{fontenc}
+%\usepackage{lmodern}
 
 \input{heading}
 
