metadata updates for Jekyll

--- a/bibs/books/2000-book-christopher_thiruvathukal_hpjpc_2000.bib
+++ b/bibs/books/2000-book-christopher_thiruvathukal_hpjpc_2000.bib
@@ -1,4 +1,5 @@
 @book{christopher_thiruvathukal_hpjpc_2000,
+ abbr = {Books},
  author = {Christopher, Thomas W. and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  isbn = {978-0-13-016164-2},
