--- a/bibs/books/2002-book-thiruvathukal_shafaee_christopher_wpp_2002.bib
+++ b/bibs/books/2002-book-thiruvathukal_shafaee_christopher_wpp_2002.bib
@@ -1,4 +1,5 @@
 @book{thiruvathukal_shafaee_christopher_wpp_2002,
+ abbr = {Books},
  address = {Upper Saddle River, NJ},
  author = {Thiruvathukal, George K. and Shafaee, John P. and Christopher, Thomas W.},
  copyright = {All rights reserved},
