--- a/bibs/books/2012-book-jones_thiruvathukal_wii_2012.bib
+++ b/bibs/books/2012-book-jones_thiruvathukal_wii_2012.bib
@@ -1,4 +1,5 @@
 @book{jones_thiruvathukal_wii_2012,
+ abbr = {Books},
  author = {Jones, Steven E. and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  publisher = {{MIT Press}},
