--- a/bibs/books/2017-book-carver_hong_thiruvathukal_se4science_2017.bib
+++ b/bibs/books/2017-book-carver_hong_thiruvathukal_se4science_2017.bib
@@ -1,4 +1,5 @@
 @book{carver_hong_thiruvathukal_se4science_2017,
+ abbr = {Books},
  abstract = {Software Engineering for Science provides an in-depth collection of peer-reviewed chapters that describe with applying software engineering practices to the development of scientifi software. It provides a better understanding of how software engineering is and should be practiced, and which software engineering practices are effective for scientific software. The book starts with a detailed overview of the Scientific Software Lifecycle, and a general overview of the scientific software development process. It highlights key issues commonly arising during scientific software development, as well as solutions to these problems. The second part of the book provides examples of the use of testing in scientific software development, including key issues and challenges.},
  author = {Carver, Jeffrey and Hong, Neil P. Chue  and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
