update selected publications for web site

--- a/bibs/techreport/2020-misc-ghodgaonkar2020observing.bib
+++ b/bibs/techreport/2020-misc-ghodgaonkar2020observing.bib
@@ -8,6 +8,7 @@
  pdf = {https://arxiv.org/abs/2005.09091},
  primaryclass = {cs.CY},
  title = {Observing Responses to the COVID-19 Pandemic using Worldwide Network Cameras},
- year = {2020}
+ year = {2020},
+ selected = {true},
 }
 
