add metadata for Jekyll site

--- a/bibs/inproceedings/1991-inproceedings-george_k_thiruvathukal_simulation_1991.bib
+++ b/bibs/inproceedings/1991-inproceedings-george_k_thiruvathukal_simulation_1991.bib
@@ -1,4 +1,5 @@
 @inproceedings{george_k_thiruvathukal_simulation_1991,
+ abbr = {IEEE},
  abstract = {Message Driven Computation (MDC) is a model of computation with which they have been experimenting at the Illinois Institute of Technology. The authors aim to prove the viability of MDC in practice for the expression of parallel algorithms and the implementation of functional and dataflow programming languages. In the paper they discuss their implementation of the Lucid programming language in MDC. The discussion presents a subset of Lucid which illustrates the principles of Lucid, Message Driven Computing, and the translation into and the interpretation of dataflow graphs.$<$$>$},
  author = {Thiruvathukal, George K. and Christopher, Thomas W.},
  booktitle = {{International Parallel Processing Symposium}},
