--- a/bibs/inproceedings/1994-inproceedings-george_k_thiruvathukal_toward_1994.bib
+++ b/bibs/inproceedings/1994-inproceedings-george_k_thiruvathukal_toward_1994.bib
@@ -1,4 +1,5 @@
 @inproceedings{george_k_thiruvathukal_toward_1994,
+ abbr = {IEEE},
  author = {Thiruvathukal, George K.},
  booktitle = {International Conference on High-Performance Computing (IEEE HiPC) India},
  month = {12},
