--- a/bibs/inproceedings/1994-inproceedings-william_t_oconnell_distributed_1994.bib
+++ b/bibs/inproceedings/1994-inproceedings-william_t_oconnell_distributed_1994.bib
@@ -1,4 +1,5 @@
 @inproceedings{william_t_oconnell_distributed_1994,
+ abbr = {Conference},
  author = {O'Connell, William T. and Thiruvathukal, George K. and Christopher, Thomas W.},
  booktitle = {International {{Conference}} on {{Parallel Processing}}},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
