--- a/bibs/inproceedings/2000-inproceedings-x_shen_novel_2000.bib
+++ b/bibs/inproceedings/2000-inproceedings-x_shen_novel_2000.bib
@@ -1,4 +1,5 @@
 @inproceedings{x_shen_novel_2000,
+ abbr = {IEEE},
  abstract = {Our results demonstrate that our novel application development environment provides both ease-of-use and high performance for large-scale, I/O-intensive scientific applications.},
  address = {ACM, 2 Penn Plaza, Suite 701, New York, NY 10121-0701, USA},
  author = {Shen, Xiaohui and Liao, Wei-Keng and Choudhary, Alok N. and Memik, Gokhan and Kandemir, Mahmut and More, Sachin and Thiruvathukal, George K. and Singh, Arti},
