--- a/bibs/inproceedings/2003-inproceedings-wei-keng_liao_scalable_2003.bib
+++ b/bibs/inproceedings/2003-inproceedings-wei-keng_liao_scalable_2003.bib
@@ -1,4 +1,5 @@
 @inproceedings{wei-keng_liao_scalable_2003,
+ abbr = {Conference},
  author = {Liao, Wei-Keng and Choudhary, Alok N. and Coloma, Kenin and Thiruvathukal, George K. and Ward, Lee and Russell, Eric and Pundit, Neil},
  booktitle = {International {{Conference}} on {{Parallel Processing}}},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
