--- a/bibs/inproceedings/2006-inproceedings-george_k_thiruvathukal_electronic_2006.bib
+++ b/bibs/inproceedings/2006-inproceedings-george_k_thiruvathukal_electronic_2006.bib
@@ -1,4 +1,5 @@
 @inproceedings{george_k_thiruvathukal_electronic_2006,
+ abbr = {Poster},
  author = {Thiruvathukal, George K. and Frantzen, Allen J.},
  booktitle = {Chicago Colloquium on Digital Humanities and Computer Science},
  title = {Electronic Editing of Anglo-Saxon Texts},
