--- a/bibs/inproceedings/2006-inproceedings-gonzalez_hydra_2006-1.bib
+++ b/bibs/inproceedings/2006-inproceedings-gonzalez_hydra_2006-1.bib
@@ -1,4 +1,5 @@
 @inproceedings{gonzalez_hydra_2006-1,
+ abbr = {Conference},
  author = {Gonzalez, Benjamin and Thiruvathukal, George K.},
  booktitle = {Linux Clusters International},
  shorttitle = {The {{Hydra Filesystem}}},
