--- a/bibs/inproceedings/2008-inproceedings-matt_bone_taming_2008.bib
+++ b/bibs/inproceedings/2008-inproceedings-matt_bone_taming_2008.bib
@@ -1,4 +1,5 @@
 @inproceedings{matt_bone_taming_2008,
+ abbr = {IEEE},
  abstract = {Processing markup in object-oriented languages often requires the programmer to focus on the objects generating the markup rather than the more pertinent domain objects. The BetterXML framework aims to improve this situation by allowing the programmer to develop a domain-specific object model as usual and later bind this model to preexisting or newly generated markup. To this end, the framework provides two types of object trees, XElement and NaturalXML, for representing XML documents. XElement goes beyond DOM-like automatic parsing of XML by supporting the custom mapping of elements to domain objects; NaturalXML allows the mapping of existing domain objects to XML elements using class metadata. Both types of object trees can be inflated and deflated by means of a common intermediate representation in the form of an event stream. Finally, the framework includes the XML Intermediate Representation (XIR), a lossless record-oriented representation of XML documents for efficient streaming and other types of data exchange.},
  author = {Bone, Matt and Nabicht, Peter F. and Läufer and Thiruvathukal, George K.},
  booktitle = {IEEE International Conference on Electro/Information Technology (EIT 2008)},
