--- a/bibs/inproceedings/2010-inproceedings-kaylor_online_2010.bib
+++ b/bibs/inproceedings/2010-inproceedings-kaylor_online_2010.bib
@@ -1,4 +1,5 @@
 @inproceedings{kaylor_online_2010,
+ abbr = {IEEE},
  abstract = {We present a novel form of intra-volume directory layering with hierarchical, inheritance-like namespace unification. While each layer of an OLFS volume constitutes a subvolume that can be mounted separately in a fan-in configuration, the entire hierarchy is always accessible (online) and fully navigable through any mounted layer. OLFS uses a relational database to store its layering metadata and either a relational database or any (virtual) host file system as its backing store, along with metadata and block caching for improved performance. Because OLFS runs as a virtual file system in user-space, its capabilities are available to all existing software without modification or special privileges. We have developed a reference implementation of OLFS for FUSE based on MySQL and XFS, and conducted performance benchmarking against XFS by itself. We explore several applications of OLFS, such as enhanced server synchronization, transactional file operations, and versioning.},
  author = {Kaylor, Joe P. and Läufer, Konstantin and Thiruvathukal, George K.},
  booktitle = {IEEE International Conference on Electro/Information Technology (EIT 2010)},
