--- a/bibs/inproceedings/2011-inproceedings-dh2011_jones_thiruvathukal.bib
+++ b/bibs/inproceedings/2011-inproceedings-dh2011_jones_thiruvathukal.bib
@@ -1,4 +1,5 @@
 @inproceedings{dh2011_jones_thiruvathukal,
+ abbr = {Conference},
  author = {Jones, Steven E. and Thiruvathukal, George K.},
  booktitle = {Digital Humanities 2011 (DH2011)},
  pages = {163--164},
