--- a/bibs/inproceedings/2013-inproceedings-jeffrey_carver_software_2013.bib
+++ b/bibs/inproceedings/2013-inproceedings-jeffrey_carver_software_2013.bib
@@ -1,4 +1,5 @@
 @inproceedings{jeffrey_carver_software_2013,
+ abbr = {Workshop},
  author = {Carver, Jeffrey C. and Thiruvathukal, George K.},
  booktitle = {WSSSPE 2013},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
