--- a/bibs/inproceedings/2014-inproceedings-dh2014_borg_thiruvathukal.bib
+++ b/bibs/inproceedings/2014-inproceedings-dh2014_borg_thiruvathukal.bib
@@ -1,4 +1,5 @@
 @inproceedings{dh2014_borg_thiruvathukal,
+ abbr = {Conference},
  author = {Borg, Trevor and Thiruvathukal, George K.},
  booktitle = {Proceedings of Digital Humanities 2014 (DH2014)},
  title = {{Single Page Apps for Humanists: A Case Study Using the Perseus Richmond Times Corpus}},
