--- a/bibs/inproceedings/2016-inproceedings-adrienne_decker_research_2016.bib
+++ b/bibs/inproceedings/2016-inproceedings-adrienne_decker_research_2016.bib
@@ -1,4 +1,5 @@
 @inproceedings{adrienne_decker_research_2016,
+ abbr = {IEEE},
  address = {Piscataway, NJ},
  author = {Decker, Adrienne and Payton, Jamie and Eiselt, Kurt and Barnes, Tiffany and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
