--- a/bibs/inproceedings/2017-inproceedings-david_b_dennis_computer_2017.bib
+++ b/bibs/inproceedings/2017-inproceedings-david_b_dennis_computer_2017.bib
@@ -1,4 +1,5 @@
 @inproceedings{david_b_dennis_computer_2017,
+ abbr = {Presentation},
  author = {Dennis, David B. and Thiruvathukal, George K.},
  booktitle = {CESTEMER Conference: Cultivating Ensembles in STEM Education and Research},
  title = {Computer Science and Cultural History: A Dialogue},
