--- a/bibs/inproceedings/2018-inproceedings-2018LPIRC.bib
+++ b/bibs/inproceedings/2018-inproceedings-2018LPIRC.bib
@@ -1,4 +1,5 @@
 @inproceedings{2018LPIRC,
+ abbr = {IEEE},
  author = {Sergei Alyamkin and Matthew Ardi and Achille Brighton and Alexander C. Berg and Yiran Chen and Hsin-Pai Cheng and Bo Chen and Zichen Fan and Chen Feng and Bo Fu and Kent Gauen and Jongkook Go and Alexander Goncharenko and Xuyang Guo and Hong Hanh Nguyen and Andrew Howard and Yuanjun Huang and Donghyun Kang and Jaeyoun Kim and Alexander Kondratyev and Seungjae Lee and Suwoong Lee and Junhyeok Lee and Zhiyu Liang and Xin Liu and Juzheng Liu and Zichao Li and Yang Lu and Yung-Hsiang Lu and Deeptanshu Malik and Eunbyung Park and Denis Repin and Tao Sheng and Liang Shen and Fei Sun and David Svitov and George K. Thiruvathukal and Baiwu Zhang and Jingchi Zhang and Xiaopeng Zhang and Shaojie Zhuo},
  booktitle = {arXiv:1810.01732},
  title = {2018 Low-Power Image Recognition Challenge: Status, Challenegs, Opportunities},
