--- a/bibs/inproceedings/2018-inproceedings-purdue_cam2_kaseb_resource_management.bib
+++ b/bibs/inproceedings/2018-inproceedings-purdue_cam2_kaseb_resource_management.bib
@@ -1,4 +1,5 @@
 @inproceedings{purdue_cam2_kaseb_resource_management,
+ abbr = {IEEE},
  author = {Kaseb, Ahmed S. and Fu, Bo and Mohan, Anup and Lu, Yung-Hsiang and Reibman, Amy and Thiruvathukal, George K.},
  booktitle = {IEEE International Conference on Multimedia Information Processing and Retrieval},
  title = {Analyzing Real-Time Multimedia Content From Network Cameras Using CPUs and GPUs in the Cloud},
