--- a/bibs/journal/1997-article-ian_foster_technologies_1997.bib
+++ b/bibs/journal/1997-article-ian_foster_technologies_1997.bib
@@ -1,4 +1,5 @@
 @article{ian_foster_technologies_1997,
+ abbr = {Journal},
  author = {Foster, Ian and Thiruvathukal, George K. and Tuecke, Steven},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1040-3108},
