--- a/bibs/journal/1998-article-george_k_thiruvathukal_reflective_1998.bib
+++ b/bibs/journal/1998-article-george_k_thiruvathukal_reflective_1998.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_reflective_1998,
+ abbr = {Journal},
  author = {Thiruvathukal, George K. and Thomas, Lovely S. and Korczynski, Andrew T.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1040-3108},
