--- a/bibs/journal/1998-article-ian_foster_wide-area_1998.bib
+++ b/bibs/journal/1998-article-ian_foster_wide-area_1998.bib
@@ -1,4 +1,5 @@
 @article{ian_foster_wide-area_1998,
+ abbr = {Journal},
  author = {Foster, Ian and Geisler, Jonathan and Gropp, William and Karonis, Nicholas and Lusk, Ewing and Thiruvathukal, George K. and Tuecke, Steven},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {0167-8191},
