--- a/bibs/journal/2000-article-gregor_von_laszewski_making_2000.bib
+++ b/bibs/journal/2000-article-gregor_von_laszewski_making_2000.bib
@@ -1,4 +1,5 @@
 @article{gregor_von_laszewski_making_2000,
+ abbr = {Journal},
  author = {von Laszewski, Gregor and Thiruvathukal, George K. and Foster, Ian},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {0926-9630},
