--- a/bibs/journal/2016-article-steven_reisman_polyglot_2016.bib
+++ b/bibs/journal/2016-article-steven_reisman_polyglot_2016.bib
@@ -1,4 +1,5 @@
 @article{doi:10.4137/EBO.S32757,
+ abbr = {Journal},
 author = {Reisman, Steven and Hatzopoulos, Thomas and Läufer, Konstantin and Thiruvathukal, George K. and Putonti, Catherine},
 title ={A Polyglot Approach to Bioinformatics Data Integration: A Phylogenetic Analysis of HIV-1},
 journal = {Evolutionary Bioinformatics},
