--- a/bibs/journal/2018-article-gj_matthews_comparison_2018.bib
+++ b/bibs/journal/2018-article-gj_matthews_comparison_2018.bib
@@ -1,4 +1,5 @@
 @article{gj_matthews_comparison_2018,
+ abbr = {Journal},
  author = {Matthews, Gregory J. and Brophy, Juliet K. and Gu, Hongie and Luetkemeier, Maxwell P. and Thiruvathukal, George K.},
  title = {A Comparison of Machine Learning Techniques for Taxonomic Classification of Teeth from the Family Bovidae},
  journal = {Journal of Applied Statistics},
