--- a/bibs/magazine/2007-article-konstantin_laufer_hike_2007.bib
+++ b/bibs/magazine/2007-article-konstantin_laufer_hike_2007.bib
@@ -1,4 +1,5 @@
 @article{konstantin_laufer_hike_2007,
+ abbr = {Magazine},
  abstract = {By incorporating automated component, integration, and acceptance testing into the various tiers of a lightweight lava 2 Enterprise Edition (J2EE) Web application architecture, developers can shorten the development cycle and increase the quality of their work},
  author = {Läufer, Konstantin and Thiruvathukal, George K. and González, Benjamin},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
