--- a/bibs/magazine/2009-article-k_laufer_putting_2009.bib
+++ b/bibs/magazine/2009-article-k_laufer_putting_2009.bib
@@ -1,4 +1,5 @@
 @article{k_laufer_putting_2009,
+ abbr = {Magazine},
  author = {Läufer, Konstantin and Thiruvathukal, George K. and Nishimura, Ryohei and Martínez-Eiroa, Carlos Ramírez},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
