--- a/bibs/magazine/2009-article-laufer_scientific_2009.bib
+++ b/bibs/magazine/2009-article-laufer_scientific_2009.bib
@@ -1,4 +1,5 @@
 @article{laufer_scientific_2009,
+ abbr = {Magazine},
  author = {Läufer, Konstantin and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
