--- a/bibs/magazine/2016-article-george_k_thiruvathukal_beyond_2016.bib
+++ b/bibs/magazine/2016-article-george_k_thiruvathukal_beyond_2016.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_beyond_2016,
+ abbr = {Magazine},
  author = {Thiruvathukal, George K.},
  journal = {EdTech Digest},
  title = {Beyond {{Pythagoras}}},
