--- a/bibs/magazine/2016-article-george_k_thiruvathukal_how_2016.bib
+++ b/bibs/magazine/2016-article-george_k_thiruvathukal_how_2016.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_how_2016,
+ abbr = {Magazine},
  author = {Thiruvathukal, George K.},
  abstract = {As sci-fi readers and film buffs know, many of these ideas that have been foreshadowed--and that seem far-fetched in--fiction are beginning to seem possible. Whether we are considering the benevolent Commander Data in Star Trek: The Next Generation or fearing the terrifying Terminator, we are entering an era where AI as is rapidly entering the public discourse.},
  journal = {VentureBeat},
