--- a/bibs/magazine/2016-article-tiffany_barnes_best_2016.bib
+++ b/bibs/magazine/2016-article-tiffany_barnes_best_2016.bib
@@ -1,4 +1,5 @@
 @article{tiffany_barnes_best_2016,
+ abbr = {Magazine},
  author = {Barnes, Tiffany and Payton, Jamie and Thiruvathukal, George K. and Boyer, Kristy Elizabeth and Forbes, Jeffrey},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
