--- a/bibs/magazine/2016-article-tiffany_barnes_need_2016.bib
+++ b/bibs/magazine/2016-article-tiffany_barnes_need_2016.bib
@@ -1,4 +1,5 @@
 @article{tiffany_barnes_need_2016,
+ abbr = {Magazine},
  author = {Barnes, Tiffany and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {0001-0782},
