--- a/bibs/magazine/2017-article-george_f_hurlburt_graph_2017.bib
+++ b/bibs/magazine/2017-article-george_f_hurlburt_graph_2017.bib
@@ -1,4 +1,5 @@
 @article{george_f_hurlburt_graph_2017,
+ abbr = {Magazine},
  author = {Hurlburt, George F. and Thiruvathukal, George K. and Lee, Maria R.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1520-9202},
