--- a/bibs/magazine/2018-article-8291785.bib
+++ b/bibs/magazine/2018-article-8291785.bib
@@ -1,4 +1,5 @@
 @article{8291785,
+ abbr = {Magazine},
  abstract = {Former CiSE EICs reflect on the magazine’s 20th anniversary.},
  author = {Sullivan, Francis and Chonacky, Norman and Beichl, Isabel and Thiruvathukal, George K.},
  doi = {10.1109/MCSE.2018.011111118},
