--- a/bibs/misc/2013-misc-gcasr-tablets.bib
+++ b/bibs/misc/2013-misc-gcasr-tablets.bib
@@ -1,4 +1,5 @@
 @misc{gcasr_2013_tablets,
+ abbr = {Workshop},
  author = {Dias, Thomas Delgado and Yan, Xian and Läufer, Konstantin and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  shorttitle = {{GCASR 15}},
