--- a/bibs/misc/2015-misc-catherine_putonti_organised_2015.bib
+++ b/bibs/misc/2015-misc-catherine_putonti_organised_2015.bib
@@ -1,4 +1,5 @@
 @misc{catherine_putonti_organised_2015,
+ abbr = {Dataset},
  author = {Putonti, Catherine and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  publisher = {{Figshare}},
