--- a/bibs/misc/2018-misc-woolf_2018.bib
+++ b/bibs/misc/2018-misc-woolf_2018.bib
@@ -1,4 +1,5 @@
 @misc{woolf_2018,
+ abbr = {Archive},
  author = {Caughie, Pamela L. and Hayward, Nicholas J. and Hussey, Mark and Shillingsburg, Peter J. and Thiruvathukal, George K.},
  url = {http://woolfonline.com},
  title = {Woolf Online},
