--- a/bibs/techreport/2015-techreport-george_k_thiruvathukal_apt_2015.bib
+++ b/bibs/techreport/2015-techreport-george_k_thiruvathukal_apt_2015.bib
@@ -1,4 +1,5 @@
 @techreport{george_k_thiruvathukal_apt_2015,
+ abbr = {User Manual},
  author = {Thiruvathukal, George K. and Verun, Ufuk},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  institution = {{Figshare}},
