--- a/bibs/techreport/2016-techreport-jeffrey_carver_collaborative_2016.bib
+++ b/bibs/techreport/2016-techreport-jeffrey_carver_collaborative_2016.bib
@@ -1,4 +1,5 @@
 @techreport{jeffrey_carver_collaborative_2016,
+ abbr = {Report},
  author = {Carver, Jeffrey C. and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  institution = {{Figshare}},
