--- a/bibs/inproceedings/1994-inproceedings-william_oconnell_generic_1994.bib
+++ b/bibs/inproceedings/1994-inproceedings-william_oconnell_generic_1994.bib
@@ -1,4 +1,5 @@
 @inproceedings{william_oconnell_generic_1994,
+ abbr = {Conference},
  author = {O'Connell, William T. and Thiruvathukal, George K. and Christopher, Thomas W.},
  booktitle = {International Conference on Advanced Science and Technology (ICAST 1994 at AT\&T Bell Laboratories)},
  month = {1},
