--- a/bibs/inproceedings/2010-inproceedings-george_k_thiruvathukal_e-carrel_2010.bib
+++ b/bibs/inproceedings/2010-inproceedings-george_k_thiruvathukal_e-carrel_2010.bib
@@ -1,4 +1,5 @@
 @inproceedings{george_k_thiruvathukal_e-carrel_2010,
+ abbr = {Workshop},
  abstract = {The E-Carrel project aims to address the preservation of, access to, and re-uses of humanities electronic text files. It enables dynamic, growing resource projects as repositories for new knowledge. It provides for on-line distributed data and tools that are open to new scholarly enhancement through a user friendly tagging tool, sophisticated use of stand-off markup and annotation (leveraging RDF capabilities), and a browsing system anyone can use. It creates a secure system of text preparation and dissemination that encourages collaboration and participation by anyone interested in the texts. To insure the endurance of authenticated texts, multiple copies are distributed on the Internet. Foundation texts anchor a system for maintaining and growing project usefulness beyond the originators\&rsquo; interest and the functions they imagined. Increasing access to humanities texts as useful, adaptable, reliable source materials that can be re-purposed will increase interest in continued maintenance, which are critical for long-term preservation and access.},
  author = {Thiruvathukal, George K. and Jones, Steven E. and Shillingsburg, Peter},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
