--- a/bibs/inproceedings/2011-inproceedings-kaylor_restfs_2011.bib
+++ b/bibs/inproceedings/2011-inproceedings-kaylor_restfs_2011.bib
@@ -1,4 +1,5 @@
 @inproceedings{kaylor_restfs_2011,
+ abbr = {ACM},
  abstract = {We have designed and implemented RestFS, a software framework that provides a uniform, configurable connector layer for mapping remote web-based resources to local filesystem-based resources, recognizing the similarity between these two types of resources. Such mappings enable programmatic access to a resource, as well as composition of two or more resources, through the local operating system's standard filesystem application programming interface (API), scriptable file-based command-line utilities, and inter-process communication (IPC) mechanisms. The framework supports automatic and manual authentication. We include several examples intended to show the utility and practicality of our framework.},
  address = {ACM, 2 Penn Plaza, Suite 701, New York, NY 10121-0701, USA},
  author = {Kaylor, Joe P. and Läufer, Konstantin and Thiruvathukal, George K.},
