--- a/bibs/inproceedings/2012-inproceedings-kaylor_simplifying_2012.bib
+++ b/bibs/inproceedings/2012-inproceedings-kaylor_simplifying_2012.bib
@@ -1,4 +1,5 @@
 @inproceedings{kaylor_simplifying_2012,
+ abbr = {IEEE},
  author = {Kaylor, Joe P. and Läufer and Thiruvathukal, George K.},
  booktitle = {International {{Conference}} on {{Electro Information Technology}} 2012},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
