--- a/bibs/inproceedings/2015-inproceedings-tiffany_barnes_proceedings_2015.bib
+++ b/bibs/inproceedings/2015-inproceedings-tiffany_barnes_proceedings_2015.bib
@@ -1,4 +1,5 @@
 @inproceedings{tiffany_barnes_proceedings_2015,
+ abbr = {Conference},
  author = {Barnes, Tiffany and Thiruvathukal, George K. and Boyer, Kristy Elizabeth and Forbes, Jeff and Payton, Jamie},
  booktitle = {Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT) RESPECT 2015},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
