--- a/bibs/inproceedings/2017-inproceedings-mike_lewis_distributed_2017.bib
+++ b/bibs/inproceedings/2017-inproceedings-mike_lewis_distributed_2017.bib
@@ -1,4 +1,5 @@
 @inproceedings{mike_lewis_distributed_2017,
+ abbr = {ACM},
  abstract = {Efficient RDF, graph based queries are becoming more pertinent based on the increased interest in data analytics and its intersection with large, unstructured but connected data. Many commercial systems have adopted distributed RDF graph systems in order to handle increasing dataset sizes and complex queries. This paper introduces a distribute graph approach to pre-processing linked data. Instead of traversing the memory graph, our system indexes pre-processed join elements that are organized in a graph structure. We analyze the Dbpedia data-set (derived from the Wikipedia corpus) and compare our access method to the graph traversal access approach which we also devise. Results show from our experiments that the distributed, pre-processed graph approach to accessing linked data is faster than the traversal approach over a specific range of linked queries.},
  address = {ACM, 2 Penn Plaza, Suite 701, New York, NY 10121-0701, USA},
  author = {Lewis, Mike and Thiruvathukal, George K. and Vishwanath, Venkatram and Papka, Michael and Johnson, Andrew},
