--- a/bibs/inproceedings/2018-inproceedings-purdue_cam2_hst2018.bib
+++ b/bibs/inproceedings/2018-inproceedings-purdue_cam2_hst2018.bib
@@ -1,4 +1,5 @@
 @inproceedings{purdue_cam2_hst2018,
+ abbr = {IEEE},
  author = {Surakitbanharn, Chittayong and Yau, Calvin and Wang, Guizhen and Chawla, Aniesh and Pan, Yinuo and Sun, Zhaoya and Yellin, Sam and Ebert, David and Lu, Yung-Hsiang and Thiruvathukal, George K.},
  booktitle = {IEEE Symposium on Technologies for Homeland Security},
  doi = {10.1109/THS.2016.7568911},
