--- a/bibs/inproceedings/2019-inproceedings-10.1145_3337932.3338814.bib
+++ b/bibs/inproceedings/2019-inproceedings-10.1145_3337932.3338814.bib
@@ -1,4 +1,5 @@
 @inproceedings{10.1145/3337932.3338814,
+ abbr = {ACM},
  abstract = {In testing stateful abstractions, it is often necessary to record interactions, such as method invocations, and express assertions over these interactions. Following the Test Spy design pattern, we can reify such interactions programmatically through additional mutable state. Alternatively, a mocking framework, such as Mockito, can automatically generate test spies that allow us to record the interactions and express our expectations in a declarative domain-specific language. According to our study of the test code for Scala's Iterator trait, the latter approach can lead to a significant reduction of test code complexity in terms of metrics such as code size (in some cases over 70\% smaller), cyclomatic complexity, and amount of additional mutable state required. In this tools paper, we argue that the resulting test code is not only more maintainable, readable, and intentional, but also a better stylistic match for the Scala community than manually implemented, explicitly stateful test spies.},
  address = {New York, NY, USA},
  author = {Läufer, Konstantin and O'Sullivan, John and Thiruvathukal, George K.},
