--- a/bibs/inproceedings/2020-inproceedings-acm_3409251.3411724.bib
+++ b/bibs/inproceedings/2020-inproceedings-acm_3409251.3411724.bib
@@ -1,4 +1,5 @@
 @inproceedings{10.1145/3409251.3411724,
+abbr = {ACM},
 author = {Abegaz, Brook and Chan-Tin, Eric and Klingensmith, Neil and Thiruvathukal, George K.},
 title = {Addressing Rogue Vehicles by Integrating Computer Vision, Activity Monitoring, and Contextual Information},
 year = {2020},
