--- a/bibs/journal/1997-article-william_t_oconnell_distributed_1997.bib
+++ b/bibs/journal/1997-article-william_t_oconnell_distributed_1997.bib
@@ -1,4 +1,5 @@
 @article{william_t_oconnell_distributed_1997,
+ abbr = {Journal},
  author = {O'Connell, William T. and Thiruvathukal, George K. and Christopher, Thomas W.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1206-212X},
