--- a/bibs/journal/1998-article-ian_foster_computational_1998.bib
+++ b/bibs/journal/1998-article-ian_foster_computational_1998.bib
@@ -1,4 +1,5 @@
 @article{ian_foster_computational_1998,
+ abbr = {Journal},
  author = {Foster, Ian and von Laszewski, Gregor and Thiruvathukal, George K. and Toonen, Brian},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {0167-739X},
