--- a/bibs/journal/2000-article-george_k_thiruvathukal_java_2000.bib
+++ b/bibs/journal/2000-article-george_k_thiruvathukal_java_2000.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_java_2000,
+ abbr = {Journal},
  author = {Thiruvathukal, George K. and Dickens, Phil M. and Bhatti, Shahzad},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1040-3108},
