--- a/bibs/magazine/2004-article-george_k_thiruvathukal_natural_2004.bib
+++ b/bibs/magazine/2004-article-george_k_thiruvathukal_natural_2004.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_natural_2004,
+ abbr = {Magazine},
  author = {Thiruvathukal, George K. and Läufer, Konstantin},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
