--- a/bibs/magazine/2008-article-bill_feiereisen_at_2008.bib
+++ b/bibs/magazine/2008-article-bill_feiereisen_at_2008.bib
@@ -1,4 +1,5 @@
 @article{bill_feiereisen_at_2008,
+ abbr = {Magazine},
  author = {Feireisen, Bill and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
