--- a/bibs/magazine/2008-article-volodymyr_kindratenko_high-performance_2008.bib
+++ b/bibs/magazine/2008-article-volodymyr_kindratenko_high-performance_2008.bib
@@ -1,4 +1,5 @@
 @article{volodymyr_kindratenko_high-performance_2008,
+ abbr = {Magazine},
  abstract = {As chip designers struggle to increase the speed of conventional microprocessors, the scientific computing community is turning its attention to alternative architectures that utilize computational accelerators to improve the application performance. This special issue of CiSE examines several examples of computationally demanding applications implemented on novel high-performance computing architectures and points out the challenges and opportunities that these new architectures bring up.},
  author = {Kindratenko, Volodymyr and Thiruvathukal, George K. and Gottlieb, Steven},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
