--- a/bibs/magazine/2010-article-george_k_thiruvathukal_virtualization_2010.bib
+++ b/bibs/magazine/2010-article-george_k_thiruvathukal_virtualization_2010.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_virtualization_2010,
+ abbr = {Magazine},
  author = {Thiruvathukal, George K. and Läufer, Konstantin and Hinsen, Konrad and Kaylor, Joe P.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
