--- a/bibs/magazine/2011-article-laufer_moving_2011.bib
+++ b/bibs/magazine/2011-article-laufer_moving_2011.bib
@@ -1,4 +1,5 @@
 @article{laufer_moving_2011,
+ abbr = {Magazine},
  author = {Läufer, Konstantin and Thiruvathukal, George K. and Dennis, David B.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
