--- a/bibs/magazine/2012-article-dejan_milojicic_innovation_2012.bib
+++ b/bibs/magazine/2012-article-dejan_milojicic_innovation_2012.bib
@@ -1,4 +1,5 @@
 @article{dejan_milojicic_innovation_2012,
+ abbr = {Magazine},
  author = {Milojicic, Dejan and Arlitt, Martin and Seligmann, Doree D. and Thiruvathukal, George K. and Timmerer, Christian},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {0018-9162},
