--- a/bibs/magazine/2013-article-george_k_thiruvathukal_cloud_2013.bib
+++ b/bibs/magazine/2013-article-george_k_thiruvathukal_cloud_2013.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_cloud_2013,
+ abbr = {Magazine},
  author = {Thiruvathukal, George K. and Parashar, Manish},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
