--- a/bibs/magazine/2014-article-manish_parashar_extreme_2014.bib
+++ b/bibs/magazine/2014-article-manish_parashar_extreme_2014.bib
@@ -1,4 +1,5 @@
 @article{manish_parashar_extreme_2014,
+ abbr = {Magazine},
  author = {Parashar, Manish and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
