--- a/bibs/magazine/2015-article-andy_terrel_scientific_2015.bib
+++ b/bibs/magazine/2015-article-andy_terrel_scientific_2015.bib
@@ -1,4 +1,5 @@
 @article{andy_terrel_scientific_2015,
+ abbr = {Magazine},
  author = {Terrel, Andy and Tobis, Michael and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
