--- a/bibs/magazine/2015-article-george_k_thiruvathukal_cloudy_2015.bib
+++ b/bibs/magazine/2015-article-george_k_thiruvathukal_cloudy_2015.bib
@@ -1,4 +1,5 @@
 @article{george_k_thiruvathukal_cloudy_2015,
+ abbr = {Magazine},
  author = {Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  journal = {Computing in Science and Engineering},
