--- a/bibs/magazine/2017-article-lorena_a_barba_reproducible_2017.bib
+++ b/bibs/magazine/2017-article-lorena_a_barba_reproducible_2017.bib
@@ -1,4 +1,5 @@
 @article{lorena_a_barba_reproducible_2017,
+ abbr = {Magazine},
  author = {Barba, Lorena A. and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  issn = {1521-9615},
