--- a/bibs/misc/2013-misc-gcasr-environmental-data.bib
+++ b/bibs/misc/2013-misc-gcasr-environmental-data.bib
@@ -1,4 +1,5 @@
 @misc{gcasr_2013_environmental_data,
+ abbr = {Workshop},
  author = {Stasiuk, Paul and Läufer, Konstantin and Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  shorttitle = {GCASR 13},
