--- a/bibs/misc/2015-misc-george_k_thiruvathukal_gcasr_2015.bib
+++ b/bibs/misc/2015-misc-george_k_thiruvathukal_gcasr_2015.bib
@@ -1,4 +1,5 @@
 @misc{george_k_thiruvathukal_gcasr_2015,
+ abbr = {Workshop},
  author = {Thiruvathukal, George K.},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  shorttitle = {{GCASR 15}},
