--- a/bibs/misc/2015-misc-gkt_hivdb.bib
+++ b/bibs/misc/2015-misc-gkt_hivdb.bib
@@ -1,4 +1,5 @@
 @misc{gkt_hivdb,
+ abbr = {Archive},
  author = {Thiruvathukal, George K. and Putonti, Catherine and Reisman, Steven},
  copyright = {Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC-BY-NC-SA)},
  url = {http://hivdb.cs.luc.edu},
