--- a/bibs/books/2002-book-thiruvathukal_shafaee_christopher_wpp_2002.bib
+++ b/bibs/books/2002-book-thiruvathukal_shafaee_christopher_wpp_2002.bib
@@ -6,6 +6,7 @@
  isbn = {978-0-13-041065-8},
  publisher = {Prentice Hall},
  title = {Web Programming: Techniques for Integrating Python, Linux, Apache, and MySQL},
- year = {2002}
+ year = {2002},
+ abstract = {This book is out of print but will be released in PDF form in January 2021.},
 }
 
