WPP book udpate - PDF and abstract

--- a/bibs/books/2002-book-thiruvathukal_shafaee_christopher_wpp_2002.bib
+++ b/bibs/books/2002-book-thiruvathukal_shafaee_christopher_wpp_2002.bib
@@ -7,6 +7,9 @@
  publisher = {Prentice Hall},
  title = {Web Programming: Techniques for Integrating Python, Linux, Apache, and MySQL},
  year = {2002},
- abstract = {This book is out of print but will be released in PDF form in January 2021.},
+ abstract = {This book was published in 2002 and is now out of print. Full rights have been reverted back to the authors from Prentice Hall PTR (now part of Pearson). Web Programming in Python was an early book on how to develop web applications using Python via a more integrated, framework-based approach. It provides a self-contained introduction to Python, Linux, MySQL (database programming and SQL), and Apache Web Server. We get many requests to make this book available. The world has since moved on to many other web frameworks (with a great emphasis on JavaScript) but as authors are committed to preserving knowledge and long-term digital archival. We thank our past readers for their support. Please direct any queries to George K. Thiruvathukal.},
+ url = {https://ecommons.luc.edu/cs_facpubs/267/},
+ pdf = {https://ecommons.luc.edu/cs_facpubs/267/},
+
 }
 
