add some more PC/editorial board info

--- a/service.tex
+++ b/service.tex
@@ -10,7 +10,7 @@
 
 \cvlistitem{\emph{Chair}, Search Committee, Computer Science, 2013}
 
-\cvlistitem{\emph{Member}, Faculty Council, 2012-2014}
+\cvlistitem{\emph{Member}, Faculty Council, 2012--2014}
 
 \cvlistitem{\emph{Member}, Search Committee, Non-Tenure Track Position in Digital Humanities, 2010}
 
@@ -22,17 +22,17 @@
 
 \cvlistitem{\emph{Director}, Computer Science Labs and Infrastructure, 2003-Present}
 
-\cvlistitem{\emph{Faculty Advisor}, Free/Open Source Software at Loyola Student Organization, 2008-2010}
+\cvlistitem{\emph{Faculty Advisor}, Free/Open Source Software at Loyola Student Organization, 2008--2010}
 
-\cvlistitem{\emph{Faculty Advisor}, Loyola Technology and Entrpreneurship Stuent Organization (LuTech), 2015-2017}
+\cvlistitem{\emph{Faculty Advisor}, Loyola Technology and Entrpreneurship Stuent Organization (LuTech), 2015--2017}
 
 \cvlistitem{\emph{Chair}, Undergraduate Curriculum Committee}
 
-\cvlistitem{\emph{Co-Chair}, Faculty Evaluation and Appraisal Committee, AY 2012-2018}
+\cvlistitem{\emph{Co-Chair}, Faculty Evaluation and Appraisal Committee, AY 2012--2018}
 
 \cvlistitem{\emph{Undergraduate Program Director, Temporary Assignment}, 2004}
 
-\cvlistitem{\emph{Graduate Program Director}, 2004-2006}
+\cvlistitem{\emph{Graduate Program Director}, 2004--2006}
 
 \subsection{Panel Service}
 
@@ -44,15 +44,43 @@
 
 \subsection{Conference Committees}
 
+\cvlistitem{\emph{Program Committee}, Robotics in Education 2021}
+
+\cvlistitem{\emph{Program Committee}, Robotics in Education 2020}
+
+\cvlistitem{\emph{Program Committee}, Robotics in Education 2019}
+
+\cvlistitem{\emph{Program Committee}, Chicago Colloquium on Digital Humanities and Computer Science 2018}
+
+\cvlistitem{\emph{Program Committee}, SE4Science Workshop 2018}
+
+\cvlistitem{\emph{Program Committee}, SE4Science Workshop 2017}
+
+\cvlistitem{\emph{Program Committee}, SE4Science Workshop 2016}
+
+\cvlistitem{\emph{Program Committee}, SIGCSE, CS Education Research Track, 2018}
+
+\cvlistitem{\emph{Program Committee}, The 4th International Conference on Big Data, Cloud Computing, and Data Science Engineering (BCD 2019)}
+
+\cvlistitem{\emph{Co-General Chair}, RESPECT 2019}
+
 \cvlistitem{\emph{Co-General Chair}, RESPECT 2018}
+
+\cvlistitem{\emph{Program Commmittee}, PEARC 2017 Workforce, Diversity, and Evaluation and Software and Data Tracks, 2017}
 
 \cvlistitem{\emph{Tutorials Chair}, RESPECT 2016}
 
 \cvlistitem{\emph{Co-Program Chair}, RESPECT 2015}
 
+\cvlistitem{\emph{Program Committee}, SBAC-PAD 2013 Applications and Algorithms Track 2013}
+
 \cvlistitem{\emph{Program Committee Member}, The 25th International Symposium on Computer Architecture and High Performance Computing}
 
+\cvlistitem{\emph{Program Committee}, Chicago Colloquium on Digital Humanities in Computer Science 2012}
+
 \cvlistitem{\emph{Program Chair}, Chicago Colloquium on Digital Humanities in Computer Science 2011}
+
+\cvlistitem{\emph{Program Committee}, International Conference on Cloud and Green Computing (CGC2011)}
 
 \cvlistitem{\emph{Program Committee Member}, ICSoft 2009 and 2010}
 
@@ -60,9 +88,9 @@
 
 \cvlistitem{\emph{Organizing Committee Member}, ACM Symposium on Structured Document Engineering 2005}
 
-\cvlistitem{\emph{Program Committee Member}, IPDPS Workshop on Java for High-Performance Computing, 1999-2005}
+\cvlistitem{\emph{Program Committee Member}, IPDPS Workshop on Java for High-Performance Computing, 1999--2005}
 
-\cvlistitem{\emph{Program Committee Member}, ACM Symposium on Structured Document Engineering, 2002-2004}
+\cvlistitem{\emph{Program Committee Member}, ACM Symposium on Structured Document Engineering, 2002--2004}
 
 \cvlistitem{\emph{Program Committee Member}, High-Performance Computing and Networking (HPCN), 2001}
 
@@ -74,20 +102,24 @@
 
 \subsection{Editorial Boards/Profesional Society Service}
 
-\cvlistitem{\emph{Magazine Operations Chair}, IEEE Computer Society, 2017-2018}
+\cvlistitem{\emph{Associate Editor}, Journal of Open Source Software, 2019--Present}
+
+\cvlistitem{\emph{Advisory Board}, IEEE Computer, 2020--Present}
+
+\cvlistitem{\emph{Magazine Operations Chair}, IEEE Computer Society, 2017--2018}
 
 \cvlistitem{\emph{Department and Track Editor}, Reproducible Research, CISE Magazine, 2017-Present}
 
-\cvlistitem{\emph{Department and Track Editor}, Data*, CISE Magazine, 2017-2020}
+\cvlistitem{\emph{Department and Track Editor}, Data*, CISE Magazine, 2017--2020}
 
-\cvlistitem{\emph{Associate Editor in Chief}, Computer Magazine, 2016-2020}
+\cvlistitem{\emph{Associate Editor in Chief}, Computer Magazine, 2016--2020}
 
-\cvlistitem{\emph{Editor in Chief}, Computing in Science and Engineering, 2013-2016}
+\cvlistitem{\emph{Editor in Chief}, Computing in Science and Engineering, 2013--2016}
 
-\cvlistitem{\emph{Associate Editor}, IEEE Computing Now, 2008-2014}
+\cvlistitem{\emph{Associate Editor}, IEEE Computing Now, 2008--2014}
 
-\cvlistitem{\emph{Associate Editor}, CISE Magazine, 2008-2012}
+\cvlistitem{\emph{Associate Editor}, CISE Magazine, 2008--2012}
 
-\cvlistitem{\emph{Department Editor}, Scientific Programming, CISE Magazine, 2004-2013}
+\cvlistitem{\emph{Department Editor}, Scientific Programming, CISE Magazine, 2004--2013}
 
-\cvlistitem{\emph{Secretary General}, Java Grande Forum, 1997-2000}
+\cvlistitem{\emph{Secretary General}, Java Grande Forum, 1997--2000}
