correct key for IPSN

--- a/bibs/inproceedings/2021-inproceedings-acm-ipsn.bib
+++ b/bibs/inproceedings/2021-inproceedings-acm-ipsn.bib
@@ -1,4 +1,4 @@
-@inproceedings{10.1145/3409251.3411724,
+@inproceedings{west-ipsn-2021,
 abbr = {ACM},
 author = {West, Jack and Lee, Kyuin and Banerjee, Suman and Kim, Younghyun and Thiruvathukal, George K. and and Klingensmith, Neil},
 title = {Moonshine: An Online Randomness Distiller for Zero-Involvement Authentication},
