minor paper updates - set selected for personal site

--- a/bibs/inproceedings/2021-inproceedings-acm-ipsn.bib
+++ b/bibs/inproceedings/2021-inproceedings-acm-ipsn.bib
@@ -1,5 +1,6 @@
 @inproceedings{west-ipsn-2021,
 abbr = {ACM},
+selected = {true},
 author = {West, Jack and Lee, Kyuin and Banerjee, Suman and Kim, Younghyun and Thiruvathukal, George K. and and Klingensmith, Neil},
 title = {Moonshine: An Online Randomness Distiller for Zero-Involvement Authentication},
 year = {2021},
