--- a/bibs/journal/2021-article-Dailey-TOIT.bib
+++ b/bibs/journal/2021-article-Dailey-TOIT.bib
@@ -1,6 +1,7 @@
 @article{Dailey2021,
- title = {{Automated Discovery of Network Cameras inHeterogeneous Web Pages (accepted)}},
+ title = {{Automated Discovery of Network Cameras inHeterogeneous Web Pages}},
  abbr = {ACM TOIT},
+ selected = {true},
  abstract = {Reduction in the cost of Network Cameras along with a rise in connectivity enables entities all around the world to deploy vast arrays of camera networks. Network cameras offer real-time visual data that can be used for studying traffic patterns, emergency response, security, and other applications. Although many sources of Network Camera data are available, collecting the data remains difficult due to variations in programming interface and website structures. Previous solutions rely on manually parsing the target website, taking many hours to complete. We create a general and automated solution for aggregating Network Camera data spread across thousands of uniquely structured webpages. We analyze heterogeneous webpage structures and identify common characteristics among 73 sample Network Camera websites (each website has multiple web pages). These characteristics are then used to build an automated camera discovery module that crawls and aggregates Network Camera data. Our system successfully extracts 57,364 Network Cameras from 237,257 unique web pages.},
  author = {Dailey, Ryan and Chawla, Aniesh and Liu, Andrew and Mishra, Sripath and Zhang, Ling and Majors, Josh and Lu, Yung-Hsiang and Thiruvathukal, George K.},
  doi = {TBD},
