--- a/funding.tex
+++ b/funding.tex
@@ -2,6 +2,8 @@
 
 \subsection{Research Awards/Grants}
 
+\cvline{NSF OAC-2104319}{PI, CDSE: Collaborative: Cyber Infrastructure to Enable Computer Vision Applications at the Edge Using Automated Contextual Analysis, \$174,749, 2021-Present}
+
 \cvline{NSF OAC-2027514}{Senior Personnel/Consultant, Collaborative: RAPID: Leveraging New Data Sources to Analyze the Risk of COVID-19 in Crowded Locations, \$50,000, 2020-2021}
 
 \cvline{NSF CNS-1738691}{Co-PI, Collaborative Research: Chicago Alliance for Equity in Computer Science, \$72,497, 2017-2021}
