--- a/bibs/techreport/2021-tfmg-technical-report.bib
+++ b/bibs/techreport/2021-tfmg-technical-report.bib
@@ -5,5 +5,6 @@
       year={2021},
       eprint={2107.00821},
       archivePrefix={arXiv},
-      primaryClass={cs.SE}
+      primaryClass={cs.SE},
+      selected={true}
 }
