--- a/funding.tex
+++ b/funding.tex
@@ -2,7 +2,9 @@
 
 \subsection{Research Awards/Grants}
 
-\cvline{NSF OAC-2104319}{PI, CDSE: Collaborative: Cyber Infrastructure to Enable Computer Vision Applications at the Edge Using Automated Contextual Analysis, \$174,749, 2021-Present}
+\cvline{NSF OAC-2107020}{PI, Collaborative Research: OAC Core: Advancing Low-Power Computer Vision at the Edge, \$250,000, 2021-2024}
+
+\cvline{NSF OAC-2104319}{PI, CDSE: Collaborative: Cyber Infrastructure to Enable Computer Vision Applications at the Edge Using Automated Contextual Analysis, \$174,749, 2021-2024}
 
 \cvline{NSF OAC-2027514}{Senior Personnel/Consultant, Collaborative: RAPID: Leveraging New Data Sources to Analyze the Risk of COVID-19 in Crowded Locations, \$50,000, 2020-2021}
 
