add book chapter section and missing chapter

--- a/bibs/inproceedings/2021-inproceedings-acm-ipsn.bib
+++ b/bibs/inproceedings/2021-inproceedings-acm-ipsn.bib
@@ -1,7 +1,7 @@
 @inproceedings{west-ipsn-2021,
 abbr = {ACM},
 selected = {true},
-author = {West, Jack and Lee, Kyuin and Banerjee, Suman and Kim, Younghyun and Thiruvathukal, George K. and and Klingensmith, Neil},
+author = {West, Jack and Lee, Kyuin and Banerjee, Suman and Kim, Younghyun and Thiruvathukal, George K. and Klingensmith, Neil},
 title = {Moonshine: An Online Randomness Distiller for Zero-Involvement Authentication},
 year = {2021},
 publisher = {Association for Computing Machinery},
