--- a/pubs.tex
+++ b/pubs.tex
@@ -12,6 +12,7 @@
 \printbibliography[heading=none,sorting=ynt]
 \end{refsection}
 
+
 %\section*{Dissertation}
 %\begin{refsection}[bibliography/theses.bib]
 %\nocite{*}
@@ -26,6 +27,12 @@
 
 \section*{Conferences}
 \begin{refsection}[bibliography/inproceedings.bib]
+\nocite{*}
+\printbibliography[heading=none,sorting=ynt]
+\end{refsection}
+
+\section*{Book Chapters }
+\begin{refsection}[bibliography/incollection.bib]
 \nocite{*}
 \printbibliography[heading=none,sorting=ynt]
 \end{refsection}
