add ASP-DAC and update Frontiers .bib

--- a/bibs/journal/2021-article-Frontiers-Shapes.bib
+++ b/bibs/journal/2021-article-Frontiers-Shapes.bib
@@ -1,5 +1,8 @@
 @ARTICLE{10.3389/fams.2021.759622,
-  
+
+abbr={Frontiers},
+selected={true},
+
 AUTHOR={Matthews, Gregory J. and Bharath, Karthik and Kurtek, Sebastian and Brophy, Juliet K. and Thiruvathukal, George K. and Harel, Ofer},   
 	 
 TITLE={Shape-Based Classification of Partially Observed Curves, With Applications to Anthropology},      
