--- a/appointments.tex
+++ b/appointments.tex
@@ -2,6 +2,8 @@
 
 \vspace{6pt}
 
+\cventry{2022--Present}{Computer Science Department Chairperson}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
+
 \cventry{2011--Present}{Full Professor of Computer Science}{Loyola University Chicago}{Chicago, IL}{}{\vspace{3pt}}
 
 \cventry{2015--Present}{Visiting Computer Scientist, Argonne Leadership Computing Facility}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
