--- a/heading.tex
+++ b/heading.tex
@@ -46,7 +46,7 @@
   {}{}% <success><failure>
   
 % personal data
-\name{George}{K. Thiruvathukal}
+\name{George}{K.\ Thiruvathukal, PhD}
 \title{C.V.}                               % optional, remove / comment the line if not wanted
 \address{Loyola University Chicago}{1032 W Sheridan Road}{Chicago, IL 60660}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 %\phone[mobile]{+1.773.829.4872}                   % optional, remove / comment the line if not wanted
