updates for bibliometrics

--- a/pubs.tex
+++ b/pubs.tex
@@ -6,18 +6,13 @@
 
 \setlength\bibitemsep{1.5\itemsep}
 
+\input{scholarly-bibliometrics}
+
 \section*{Books}
 \begin{refsection}[bibliography/books.bib]
 \nocite{*}
 \printbibliography[heading=none,sorting=ynt]
 \end{refsection}
-
-
-%\section*{Dissertation}
-%\begin{refsection}[bibliography/theses.bib]
-%\nocite{*}
-%\printbibliography[heading=none,sorting=ynt]
-%\end{refsection}
 
 \section*{Journal Articles}
 \begin{refsection}[bibliography/journal.bib]
