correct typo in pubs.tex

--- a/pubs.tex
+++ b/pubs.tex
@@ -44,7 +44,7 @@
 \printbibliography[heading=none,sorting=ynt]
 \end{refsection}
 
-\section*{Miscelleneous}
+\section*{Miscellaneous}
 \begin{refsection}[bibliography/misc.bib]
 \nocite{*}
 \printbibliography[heading=none,sorting=ynt]
