add support for GitHub contributions

--- a/pubs.tex
+++ b/pubs.tex
@@ -7,6 +7,7 @@
 \setlength\bibitemsep{1.5\itemsep}
 
 \input{scholarly-bibliometrics}
+\input{github-contributions}
 
 \section*{Books}
 \begin{refsection}[bibliography/books.bib]
