add recent Intel gift

--- a/funding.tex
+++ b/funding.tex
@@ -44,6 +44,8 @@
 
 \subsection{Gifts}
 
+\cvline{Intel}{PI, Unrestricted gift to oneAPI curricular modules for systmes at Loyola, \$40,000, 2022}
+
 \cvline{Google}{PI, Unrestricted gift to support machine learning and software engineering research at Loyola, \$30,000, 2019}
 
 \cvline{Facebook Research}{PI, Unrestricted gift to support low-power computer vision and reproducibility research at Loyola, \$30,000, 2020}
