--- a/bibs/books/2022-book-thiruvathukal-et-al-lpcv.bib
+++ b/bibs/books/2022-book-thiruvathukal-et-al-lpcv.bib
@@ -9,5 +9,6 @@
  url = {https://ecommons.luc.edu/cs_facpubs/281/},
  pdf = {https://ecommons.luc.edu/cs_facpubs/281/},
  website = {https://www.routledge.com/Low-Power-Computer-Vision-Improve-the-Efficiency-of-Artificial-Intelligence/Thiruvathukal-Lu-Kim-Chen-Chen/p/book/9780367744700},
+ selected = {true}
 }
 
