--- a/bibs/inproceedings/2022-popets-mute.bib
+++ b/bibs/inproceedings/2022-popets-mute.bib
@@ -1,4 +1,6 @@
 @inproceedings{arxiv.2204.06128,
+abbr = {Conference},
+selected = {true},
   doi = {10.48550/ARXIV.2204.06128},
   url = {https://arxiv.org/abs/2204.06128},
   author = {Yang, Yucheng and West, Jack and Thiruvathukal, George K. and Klingensmith, Neil and Fawaz, Kassem},
