--- a/bibs/magazine/2022-article-thiruvathukal-lu-lpcv-vrt.bib
+++ b/bibs/magazine/2022-article-thiruvathukal-lu-lpcv-vrt.bib
@@ -1,4 +1,6 @@
 @ARTICLE{9755195,
+abbr = {Magazine},
+selected = {true},
   author={Thiruvathukal, George K. and Lu, Yung-Hsiang},
   journal={Computer}, 
   title={Efficient Computer Vision for Embedded Systems}, 
