update pdf/html links for recent paper

--- a/bibs/inproceedings/2022-ispled-acm-3531437.3539723.bib
+++ b/bibs/inproceedings/2022-ispled-acm-3531437.3539723.bib
@@ -12,5 +12,7 @@ booktitle = {Proceedings of the ACM/IEEE International Symposium on Low Power El
 articleno = {30},
 numpages = {6},
 location = {Boston, MA, USA},
-series = {ISLPED '22}
+series = {ISLPED '22},
+html = {https://ecommons.luc.edu/cs_facpubs/316/},
+pdf = {https://ecommons.luc.edu/cs_facpubs/316/}
 }
