--- a/education.tex
+++ b/education.tex
@@ -6,5 +6,7 @@
 
 \cventry{1988--1990}{M.S}{Illinois Institute of Technology}{Chicago, IL}{Computer Science}{\vspace{3pt}}
 
-\cventry{1986--1988}{B.S.}{Lewis University}{Romeoville, IL}{Computer Science and Physics Majors; Mathematics Minor}{}
+\cventry{1986--1988}{B.S.}{Lewis University}{Romeoville, IL}{Computer Science}{}
+
+\cventry{1986--1988}{B.S.}{Lewis University}{Romeoville, IL}{Physics}{}
 
